chore: add locak hook to gen diagram on commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,10 @@ repos:
     rev: v0.1.17
     hooks:
       - id: helmlint
+  - repo: local
+    hooks:
+      - id: gen_diagram
+        files: diagram_as_code.py
+        name: generate diagrams
+        entry: python diagram_as_code
+        language: system
