feat: trino cluster with 2 workers

--- a/docker/trino-coordinator/etc/node.properties
+++ b/docker/trino-coordinator/etc/node.properties
@@ -1,3 +1,4 @@
-node.environment=docker
+node.environment=production
+# node.id=my-trino-node-id
 node.data-dir=/data/trino
 plugin.dir=/usr/lib/trino/plugin
