--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,33 @@
 version: '3.9'
 services:
   trino-coordinator:
-    image: 'trinodb/trino:latest'
+    image: 'trinodb/trino:415'
     hostname: trino-coordinator
     ports:
       - '8080:8080'
     volumes:
-      - ./etc:/etc/trino
+      - ./trino-coordinator/etc:/etc/trino
+      - ./stuff:/mnt
     networks:
       - trino
+
+  trino-worker-1:
+    image: 'trinodb/trino:415'
+    volumes:
+      - ./trino-worker/etc:/etc/trino
+    networks:
+      - trino
+    depends_on:
+      - trino-coordinator
+
+  trino-worker-2:
+    image: 'trinodb/trino:415'
+    volumes:
+      - ./trino-worker/etc:/etc/trino
+    networks:
+      - trino
+    depends_on:
+      - trino-coordinator
 
   postgresdb:
     image: 'postgres:15.2'
@@ -23,20 +42,6 @@ services:
       - ./postgres-data:/var/lib/postgresql/data
     networks:
       - trino
-
-  # hive-metastore:
-  #   hostname: hive-metastore
-  #   image: 'bde2020/hive-metastore-postgresql:3.1.0'
-  #   ports:
-  #     - '9083:9083'
-  #   volumes:
-  #     - ./conf/metastore-site.xml:/opt/apache-hive-metastore-3.0.0-bin/conf/metastore-site.xml:ro
-  #   environment:
-  #     METASTORE_DB_HOSTNAME: postgresdb
-  #   depends_on:
-  #     - postgresdb
-  #   networks:
-  #     - trino
 
   hive-metastore:
     hostname: hive-metastore
@@ -97,23 +102,23 @@ services:
       - minio
     image: minio/mc
     container_name: mc
+      # /usr/bin/mc rm -r --force minio/datalake;
     entrypoint: >
       /bin/sh -c "
       until (/usr/bin/mc config host add minio http://minio:9000 minio minio123) do echo '...waiting...' && sleep 1; done;
-      /usr/bin/mc rm -r --force minio/iris;
-      /usr/bin/mc rm -r --force minio/datalake;
       /usr/bin/mc mb minio/datalake;
       /usr/bin/mc policy set public minio/datalake;
       /usr/bin/mc cp /data/iris.parq minio/datalake/iris/iris.parq;
+      /usr/bin/mc cp -r /data/bikeshare_trips minio/datalake/;
       exit 0;
       "
     networks:
       - trino
     volumes:
-      - ./data/iris.parq:/data/iris.parq
+      - ./data/:/data/
 
   cloudbeaver:
-    image: dbeaver/cloudbeaver:latest
+    image: dbeaver/cloudbeaver:23.0.2
     container_name: cloudbeaver
     # restart: always
     ports:
