fix: update config for parquet tables

--- a/docker/trino-coordinator/etc/config.properties
+++ b/docker/trino-coordinator/etc/config.properties
@@ -5,6 +5,7 @@ discovery-server.enabled=true
 discovery.uri=http://localhost:8080
 query.max-memory-per-node=1GB
 query-manager.required-workers=2
+hive.parquet.use-column-names=true
 
 #single node install config
 # coordinator=true
