--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -97,25 +97,25 @@ services:
       - trino
 
   # To Create Minio bucket and upload iris parquet file.
-  mc:
-    depends_on:
-      - minio
-    image: minio/mc
-    container_name: mc
-      # /usr/bin/mc rm -r --force minio/datalake;
-    entrypoint: >
-      /bin/sh -c "
-      until (/usr/bin/mc config host add minio http://minio:9000 minio minio123) do echo '...waiting...' && sleep 1; done;
-      /usr/bin/mc mb minio/datalake;
-      /usr/bin/mc policy set public minio/datalake;
-      /usr/bin/mc cp /data/iris.parq minio/datalake/iris/iris.parq;
-      /usr/bin/mc cp -r /data/bikeshare_trips minio/datalake/;
-      exit 0;
-      "
-    networks:
-      - trino
-    volumes:
-      - ./data/:/data/
+  # mc:
+  #   depends_on:
+  #     - minio
+  #   image: minio/mc
+  #   container_name: mc
+  #   entrypoint: >
+  #     /bin/sh -c "
+  #     until (/usr/bin/mc config host add minio http://minio:9000 minio minio123) do echo '...waiting...' && sleep 1; done;
+  #     /usr/bin/mc rm -r --force minio/datalake;
+  #     /usr/bin/mc mb minio/datalake;
+  #     /usr/bin/mc policy set public minio/datalake;
+  #     /usr/bin/mc cp /data/iris.parq minio/datalake/iris/iris.parq;
+  #     /usr/bin/mc cp -r /data/bikeshare_trips minio/datalake/;
+  #     exit 0;
+  #     "
+  #   networks:
+  #     - trino
+  #   volumes:
+  #     - ./data/:/data/
 
   cloudbeaver:
     image: dbeaver/cloudbeaver:23.0.2
